--- a/public/assets/src/style.css
+++ b/public/assets/src/style.css
@@ -45,6 +45,26 @@ body {
     background-color: #ffc107; 
     color: #333; 
 }
+.whatsapp-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #25D366; 
+    color: white;
+    padding: 3px 12px;
+    border-radius: 100%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    font-size: 30px;
+    z-index: 1000; 
+    transition: background-color 0.3s ease;
+    width: 50px;
+    height: 50px;
+}
+
+.whatsapp-button:hover {
+    background-color: #128C7E; 
+    text-decoration: none;
+}
 .jumbotron{
     background-color: #fff;
 }
